вот, это последняя отладочная програмка без рута. она только создаёт Diag.cfg в родной папке программы, которую андроид назначает. Путь наверное может быть разный на разных устройствах, но это папка к которой не надо запрашивать отдельного разрешения.

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -10,21 +10,21 @@ cmake_minimum_required(VERSION 3.4.1)
 # You can define multiple libraries, and CMake builds them for you.
 # Gradle automatically packages shared libraries with your APK.
 
-add_library( # Sets the name of the library.
-             native-lib
+file(GLOB SRC_FILES
+            src/main/cpp/*.cpp
+            src/main/cpp/*.h)
 
-             # Sets the library as a shared library.
-             SHARED
-
-             # Provides a relative path to your source file(s).
-             src/main/cpp/native-lib.cpp )
 add_library( # Sets the name of the library.
              diagRevealer
 
              # Sets the library as a shared library.
              SHARED
 
-                src/main/cpp/diagRevealer.cpp)
+                #src/main/cpp/diagRevealer.cpp
+                #src/main/cpp/consts.h
+                #src/main/cpp/hdlc.cpp
+                ${SRC_FILES})
+
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
 # default, you only need to specify the name of the public NDK library
@@ -43,11 +43,8 @@ find_library( # Sets the name of the path variable.
 # build script, prebuilt third-party libraries, or system libraries.
 
 target_link_libraries( # Specifies the target library.
-                       native-lib
 
+                        diagRevealer
                        # Links the target library to the log library
                        # included in the NDK.
-                       ${log-lib} )
-target_link_libraries(
-                       diagRevealer
                        ${log-lib} )
