json library imported. Beginning to parse packets. Already parsing headers and pushing them to json. Next should be passing json to java, deserializing there and printing to log.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,10 +11,13 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
             cmake {
-                cppFlags "-std=c++11"
+
+                cppFlags "-fexceptions -frtti -std=c++11"
+                arguments "-DANDROID_STL=c++_shared"
             }
         }
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -24,6 +27,7 @@ android {
     externalNativeBuild {
         cmake {
             path "CMakeLists.txt"
+
         }
     }
 }
